# opendota-py-sdk

./: __init__.py  pyproject.toml  setup.py
opendota_sdk/: __init__.py  opendota_sdk.py
