[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendota-sdk"
version = "1.0.0"
description = "Professional OpenDota API SDK"
authors = [{name = "Developer"}]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "requests>=2.28.0",
    "dataclasses>=0.6; python_version<'3.7'"
]

[project.urls]
Homepage = "https://github.com/yourusername/opendota-sdk"
Repository = "https://github.com/yourusername/opendota-sdk.git"